# sarup

./: .gitignore  LICENSE  README.md  STACK.md  pyproject.toml
.github/workflows/: ci.yml
bench/: benchmark.py
docs/: README.md
hooks/: README.md  sarup_hook.py
scripts/: install-autostart.ps1  install-command.ps1  install-skill.ps1  install-skill.sh  install.py  sarup-claude.ps1  sarup-claude.sh  setup.ps1  setup.sh  start-tray.ps1  uninstall.ps1  uninstall.sh
skills/sarup-setup/: SKILL.md
src/sarup/: __init__.py  compressor.py  llm.py  proxy.py  semantic.py  server.py  store.py  thai.py  tokens.py  tray.py
tests/: test_hook.py  test_mcp.py  test_proxy.py  test_thai.py  test_tray.py
