[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sarup"
version = "0.1.0"
description = "Thai-first context compression MCP server for Claude Code"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "pythainlp>=5.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
proxy = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
]
tray = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
sarup = "sarup.server:main"
sarup-proxy = "sarup.proxy:main"
sarup-tray = "sarup.tray:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sarup"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
